# diraC

./: CMakeLists.txt  Makefile  Readme.md  main.c
common/: doubleLinkedList.c  doubleLinkedList.h  string.c  string.h  tuple.h  types.h  vectorSet.c  vectorSet.h  vectorSetTests.c
complex/: Makefile  complex.c  complex.h  complexTests  complexTests.c  tuple.c  tuple.h
examples/: teleportation.c
float/: float.c  float.h
logging/: Logger.c  Logger.h
matrix/: matrix.c  matrix.h  matrixTests.c
ndarray/: ndArrayTests.c  ndarray.c  ndarray.h
prototyping/: BellCircuits.ipynb  Measurements.ipynb  QiskitHadamardParallelization.ipynb  QiskitTeleportation.ipynb  TeleportationPrototype.ipynb  VectorNormalization.ipynb  circuits.ipynb  macro_debugging.c  macro_debugging_processed
prototyping/.ipynb_checkpoints/: circuits-checkpoint.ipynb
qureg/: qureg.c  qureg.h  quregTests.c  qureg_gates.c
utils/: dataArena.c  dataArena.h  testutils.h
vector/: vector.c  vector.h  vectorCollection.c  vectorCollection.h  vectorCollectionTests.c  vectorSet.c  vectorSet.h  vectorSetTests.c  vectorTests.c
